fix image spacing for blog

--- a/projects/#1 Masterschool PROJECTS/BLOG/styles.css
+++ b/projects/#1 Masterschool PROJECTS/BLOG/styles.css
@@ -127,7 +127,7 @@ main div h2 {
 }
 .blog-section div:nth-child(1)
 {
-  width: 60%;
+  width: 50%;
 }
 
 .blog-section {
@@ -135,6 +135,7 @@ main div h2 {
   margin: 20px;
   justify-content: space-around;
   height: 300px;
+  padding: 10px;
 }
 
 .blog-section div:nth-child(2) {
